# arcgis-enterprise-clone-content

./: .bumpversion.cfg  Makefile  README.md  environment.yml  make.cmd  make.ps1  pyproject.toml
.github/: copilot-instructions.md
.specify/: init-options.json  integration.json
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
arcgis/: README.md  arcgis-enterprise-clone-content.aprx  arcgis_cloning.pyt
config/: config.yml  secrets_template.yml
docsrc/: mkdocs.yml
docsrc/mkdocs/: api.md  configuration.md  cookiecutter_reference.md  index.md  quickstart.md  usage.md
scripts/: make_data.py  make_pyt_archive.py
specs/001-environment-as-portal-config/: plan.md  spec.md  tasks.md
specs/001-environment-as-portal-config/checklists/: requirements.md
specs/002-content-migration-fn/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-content-migration-fn/checklists/: requirements.md
specs/002-content-migration-fn/contracts/: migrate_content.md
specs/003-make-data-migration-script/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-make-data-migration-script/checklists/: requirements.md
specs/003-make-data-migration-script/contracts/: make_data.md
specs/004-docs-and-readme/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-csv-url-output/: plan.md  spec.md  tasks.md
src/arcgis_cloning/: __init__.py  _main.py  config.py
src/arcgis_cloning/utils/: _data.py  (+2 more)
testing/: conftest.py  test_arcgis_cloning.py
(+3 files in other folders)
