[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]

name = "arcgis-enterprise-clone-content"

version = "0.1.0"

authors = [
  { name="Joel McCune (https://github.com/knu2xs)"},
]

description = "Useful tooling for cloning ArcGIS Enterprise content."

readme = "README.md"

requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
]


license = {text = "Apache-2.0"}


dependencies = [
    "arcgis>=2.2.0",
    "pyyaml"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["arcgis_cloning"]
